<resources>
    <string name="app_name">Test Your Brain</string>
    <string name="go">GO!</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="sum">Sum</string>
    <string name="_31_2">31 + 2</string>
    <string name="_32">32</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_40">40</string>
    <string name="play_again">Play Again ^_^</string>
    <string name="textview">TextView</string>
    <string name="correct">Correct :)</string>
    <string name="_0_01">0/0</string>
    <string name="last_score">Last Score</string>
    <string name="start_game">Start Game</string>
</resources>